Refactoring of code. Safe memory allocation.
Refactoring of code. Safe memory allocation.

--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,9 @@ _dcu/
 # Thumbnails
 ._*
 
+# Temporary files
+*.tmp
+
 # Files that might appear in the root of a volume
 .DocumentRevisions-V100
 .fseventsd
