--- a/Source/rps_build_lib.lpi
+++ b/Source/rps_build_lib.lpi
@@ -15,9 +15,9 @@
       <UseAppBundle Value="False"/>
       <ResourceType Value="res"/>
     </General>
-    <BuildModes Count="7">
-      <Item1 Name="Default_win32" Default="True"/>
-      <Item2 Name="Debug_win32">
+    <BuildModes Count="3">
+      <Item1 Name="Debug_win32" Default="True"/>
+      <Item2 Name="Debug_win64">
         <CompilerOptions>
           <Version Value="11"/>
           <PathDelim Value="\"/>
@@ -41,7 +41,7 @@
               <StackChecks Value="True"/>
             </Checks>
             <VerifyObjMethodCallValidity Value="True"/>
-            <TargetCPU Value="i386"/>
+            <TargetCPU Value="x86_64"/>
           </CodeGeneration>
           <Linking>
             <Debugging>
@@ -54,145 +54,24 @@
           <Other>
             <CustomOptions Value="-dDEBUG
 -dDEBUG_IDE
--d_INVOKECALL_IMPL_
+
+-dPS_INVOK_RTTI_IMPL
 -dUSEINVOKECALL
+
+-dxPS_NOWIDESTRING
+-dxPS_NOINT64
+-dxPS_NOSMARTLIST
+-dxPS_DELPHIDIV
 -dxPS_BTSTRINGNATIVE
--dxPS_USESSUPPORT"/>
+-dPS_USESSUPPORT
+-dxPS_NOIDISPATCH"/>
             <OtherDefines Count="1">
               <Define0 Value="RELEASE"/>
             </OtherDefines>
           </Other>
         </CompilerOptions>
       </Item2>
-      <Item3 Name="Release_win32">
-        <CompilerOptions>
-          <Version Value="11"/>
-          <PathDelim Value="\"/>
-          <Target>
-            <Filename Value="rps_build_lib"/>
-          </Target>
-          <SearchPaths>
-            <IncludeFiles Value="$(ProjOutDir)"/>
-            <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
-          </SearchPaths>
-          <CodeGeneration>
-            <SmartLinkUnit Value="True"/>
-            <TargetCPU Value="i386"/>
-            <Optimizations>
-              <OptimizationLevel Value="3"/>
-            </Optimizations>
-          </CodeGeneration>
-          <Linking>
-            <Debugging>
-              <GenerateDebugInfo Value="False"/>
-            </Debugging>
-            <LinkSmart Value="True"/>
-          </Linking>
-          <Other>
-            <CustomOptions Value="-dRELEASE"/>
-            <OtherDefines Count="1">
-              <Define0 Value="RELEASE"/>
-            </OtherDefines>
-          </Other>
-        </CompilerOptions>
-      </Item3>
-      <Item4 Name="Default_win64">
-        <CompilerOptions>
-          <Version Value="11"/>
-          <PathDelim Value="\"/>
-          <Target>
-            <Filename Value="rps_build_lib"/>
-          </Target>
-          <SearchPaths>
-            <IncludeFiles Value="$(ProjOutDir)"/>
-            <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
-          </SearchPaths>
-          <CodeGeneration>
-            <TargetCPU Value="x86_64"/>
-          </CodeGeneration>
-        </CompilerOptions>
-      </Item4>
-      <Item5 Name="Debug_win64">
-        <CompilerOptions>
-          <Version Value="11"/>
-          <PathDelim Value="\"/>
-          <Target>
-            <Filename Value="rps_build_lib"/>
-          </Target>
-          <SearchPaths>
-            <IncludeFiles Value="$(ProjOutDir)"/>
-            <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
-          </SearchPaths>
-          <Parsing>
-            <SyntaxOptions>
-              <IncludeAssertionCode Value="True"/>
-            </SyntaxOptions>
-          </Parsing>
-          <CodeGeneration>
-            <Checks>
-              <IOChecks Value="True"/>
-              <RangeChecks Value="True"/>
-              <OverflowChecks Value="True"/>
-              <StackChecks Value="True"/>
-            </Checks>
-            <VerifyObjMethodCallValidity Value="True"/>
-            <TargetCPU Value="x86_64"/>
-          </CodeGeneration>
-          <Linking>
-            <Debugging>
-              <DebugInfoType Value="dsDwarf2Set"/>
-              <UseHeaptrc Value="True"/>
-              <TrashVariables Value="True"/>
-              <UseExternalDbgSyms Value="True"/>
-            </Debugging>
-          </Linking>
-          <Other>
-            <CustomOptions Value="-dDEBUG
--dDEBUG_IDE
--d_DCC_MSG
--d_INVOKECALL_IMPL__
--dUSEINVOKECALL
--dxPS_BTSTRINGNATIVE
--dxPS_USESSUPPORT"/>
-            <OtherDefines Count="1">
-              <Define0 Value="RELEASE"/>
-            </OtherDefines>
-          </Other>
-        </CompilerOptions>
-      </Item5>
-      <Item6 Name="Release_win64">
-        <CompilerOptions>
-          <Version Value="11"/>
-          <PathDelim Value="\"/>
-          <Target>
-            <Filename Value="rps_build_lib"/>
-          </Target>
-          <SearchPaths>
-            <IncludeFiles Value="$(ProjOutDir)"/>
-            <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
-          </SearchPaths>
-          <CodeGeneration>
-            <SmartLinkUnit Value="True"/>
-            <TargetCPU Value="x86_64"/>
-            <Optimizations>
-              <OptimizationLevel Value="3"/>
-            </Optimizations>
-          </CodeGeneration>
-          <Linking>
-            <Debugging>
-              <GenerateDebugInfo Value="False"/>
-            </Debugging>
-            <LinkSmart Value="True"/>
-          </Linking>
-          <Other>
-            <CustomOptions Value="-dRELEASE"/>
-            <OtherDefines Count="1">
-              <Define0 Value="RELEASE"/>
-            </OtherDefines>
-          </Other>
-        </CompilerOptions>
-      </Item6>
-      <Item7 Name="Debug_linux_x64">
+      <Item3 Name="Debug_linux_x64">
         <CompilerOptions>
           <Version Value="11"/>
           <PathDelim Value="\"/>
@@ -230,16 +109,23 @@
           <Other>
             <CustomOptions Value="-dDEBUG
 -dDEBUG_IDE
--d_INVOKECALL_IMPL_
+
+-dPS_INVOK_RTTI_IMPL
 -dUSEINVOKECALL
+
+-dxPS_NOWIDESTRING
+-dxPS_NOINT64
+-dxPS_NOSMARTLIST
+-dxPS_DELPHIDIV
 -dxPS_BTSTRINGNATIVE
--dxPS_USESSUPPORT"/>
+-dPS_USESSUPPORT
+-dxPS_NOIDISPATCH"/>
             <OtherDefines Count="1">
               <Define0 Value="RELEASE"/>
             </OtherDefines>
           </Other>
         </CompilerOptions>
-      </Item7>
+      </Item3>
     </BuildModes>
     <PublishOptions>
       <Version Value="2"/>
@@ -270,9 +156,47 @@
       <IncludeFiles Value="$(ProjOutDir)"/>
       <UnitOutputDirectory Value="lib\$(TargetCPU)-$(TargetOS)"/>
     </SearchPaths>
+    <Parsing>
+      <SyntaxOptions>
+        <IncludeAssertionCode Value="True"/>
+      </SyntaxOptions>
+    </Parsing>
     <CodeGeneration>
+      <Checks>
+        <IOChecks Value="True"/>
+        <RangeChecks Value="True"/>
+        <OverflowChecks Value="True"/>
+        <StackChecks Value="True"/>
+      </Checks>
+      <VerifyObjMethodCallValidity Value="True"/>
       <TargetCPU Value="i386"/>
     </CodeGeneration>
+    <Linking>
+      <Debugging>
+        <DebugInfoType Value="dsDwarf2Set"/>
+        <UseHeaptrc Value="True"/>
+        <TrashVariables Value="True"/>
+        <UseExternalDbgSyms Value="True"/>
+      </Debugging>
+    </Linking>
+    <Other>
+      <CustomOptions Value="-dDEBUG
+-dDEBUG_IDE
+
+-dPS_INVOK_RTTI_IMPL
+-dUSEINVOKECALL
+
+-dxPS_NOWIDESTRING
+-dxPS_NOINT64
+-dxPS_NOSMARTLIST
+-dxPS_DELPHIDIV
+-dxPS_BTSTRINGNATIVE
+-dPS_USESSUPPORT
+-dxPS_NOIDISPATCH"/>
+      <OtherDefines Count="1">
+        <Define0 Value="RELEASE"/>
+      </OtherDefines>
+    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
